FEATURE: novas funcionalidades

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,1 +1,45 @@
-﻿
+﻿<div class="row" style=" text-align:center;">
+    <div class="col-md-4">
+        <div>
+            <a href="../Views/Client/Index.cshtml"><img src="~/images/customers.png" width="150" height="150" /></a>
+        </div>
+        <span>Cliente</span>
+    </div>
+    <div class="col-md-4">
+        <div>
+            <a href="../Views/Category/Index.cshtml"><img src="~/images/categories.png" width="150" height="150" /></a>
+        </div>
+        <span>Categoria</span>
+    </div>
+    <div class="col-md-4">
+        <div>
+            <a href="../Views/Product/Index.cshtml"><img src="~/images/products.png" width="150" height="150" /></a>
+        </div>
+        <span>Produtos</span>
+    </div>
+</div>
+
+<div class="row" style=" text-align:center">
+    <div class="col-md-4">
+        <div>
+            <a href="../Views/Sale/Index.cshtml"><img src="~/images/sales.png" width="150" height="150" /></a>
+        </div>
+        <span>Vendas</span>
+    </div>
+    <div class="col-md-4">
+        <div>
+            <a href="../Views/Report/Graphic.cshtml"><img src="~/images/reports.png" width="150" height="150" /></a>
+        </div>
+        <span>Relátorios</span>
+    </div>
+    <div class="col-md-4">
+        <div>
+            <a href="../Views/Settings/Index.cshtml"><img src="~/images/settings.png" width="150" height="150" /></a>
+        </div>
+        <span>Configurações</span>
+    </div>
+</div>
+
+
+
+ @*CRIAR UMA CLASSE CSS PARA SIMPLICAR O DESIGNER*@ 
