FEATURE:Criando categoria

--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -1,5 +1,22 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model List<SistemaVenda.Entities.Category>;
+
+<h2>Categoria</h2>
+<hr/>
+
+<table class="table table-bordered">
+    <thead>
+        <tr>
+            <th>Código</th>
+            <th>Descrição</th>
+        </tr>
+    </thead>
+    <tbody>
+            @foreach(var item in Model)
+            {
+                <tr>
+                    <td>@item.Code</td>
+                    <td>@item.Description</td>
+                </tr>
+            }
+    </tbody>
+</table>
