--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -5,7 +5,7 @@
 
 <table class="table table-bordered">
     <thead>
-        <tr>
+        <tr style="background-color:aqua;">
             <th>Código</th>
             <th>Descrição</th>
         </tr>
@@ -20,3 +20,4 @@
             }
     </tbody>
 </table>
+<button type="button" class="btn btn-outline-primary"><a asp-controller="Category" asp-action="Register"> Cadastrar</a></button>
