ADD: Adicionando funcionalidade a categoria

--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -20,4 +20,4 @@
             }
     </tbody>
 </table>
-<button type="button" class="btn btn-outline-primary"><a asp-controller="Category" asp-action="Register"> Cadastrar</a></button>
+<a type="button" class="btn btn-outline-primary" asp-controller="Category" asp-action="Register"> Cadastrar nova categoria</a>
