ADD: adicionando funcionalidades

--- a/Views/Category/Register.cshtml
+++ b/Views/Category/Register.cshtml
@@ -9,11 +9,28 @@
         </div>
         <br />
         <div class="col">
-            <button type="button" class="btn btn-outline-primary">Novo</button>
+            <button type="button" class="btn btn-outline-primary" onclick="Novo()">Novo</button>
             <button type="submit" class="btn btn-outline-success">Gravar</button>
-            <button type="button" class="btn btn-outline-danger">Excluir</button>
+            <button type="button" class="btn btn-outline-danger" onclick="Excluir(@Model.Code)">Excluir</button>
             <a type="button"  class=" btn btn-outline-warning" asp-area="" asp-controller="Category" asp-action="Index">Voltar</a>
         </div>
-    </div>
-    
+    </div>  
 </form>
+
+<script>
+    function Novo(){
+        Request("Cadastro");
+    }
+
+   
+    function Excluir(){
+        Request("Excluir\\" + Code);
+    }
+
+    function Request(request){
+        window.location = window.origin + "\\Categoria" + request;
+    }
+
+// revisar
+</script>
+
